fix: icon visible when burger menu open

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -93,3 +93,13 @@ main {
   align-items: center;
   justify-content: center;
 }
+
+.app_container.show_nav .icon_img {
+  opacity: 0;
+  visibility: hidden;
+  transform: scale(0.8);
+  transition:
+    opacity 0.3s ease,
+    visibility 0.3s ease,
+    transform 0.3s ease;
+}
